# MixCore

./: CMakeLists.txt
shaders/: frag.glsl
src/main/: main.cpp
src/main/common/core/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  Event.h  EventDispatcher.h
src/main/common/math/: Uint32.h  Vector2.h
src/main/common/renderer/: Renderer.h
src/main/common/renderer/vulkan/: VulkanPlatform.cpp  VulkanPlatform.h  VulkanQueues.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/main/common/ui/: AppUI.cpp  AppUI.h  DrawTarget.h  Drawable.h  RectanglePrimitive.cpp  RectanglePrimitive.h
src/main/common/util/: Color.cpp  Color.h  Logger.h
src/main/core/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  Event.h  EventDispatcher.h  INativeWindow.h
src/main/math/: Uint32.h  Vector2.h
src/main/platform/: PlatformWindow.h
src/main/platform/linux/: NativeEventHandler.cpp  NativeEventHandler.h  NativeWindow.cpp  NativeWindow.h  Window.cpp  Window.h
src/main/platform/linux/vulkan/: VulkanSurfaceX11.h
src/main/platform/windows/: EventHandler.cpp  EventHandler.h  NativeEventHandler.cpp  NativeEventHandler.h  NativeGLContext.h  NativeWindow.cpp  NativeWindow.h  Window.cpp  Window.h
src/main/platform/windows/vulkan/: VulkanSurfaceWin32.h
src/main/renderer/: Renderer.h  VulkanPlatform.h
src/main/renderer/vulkan/: VulkanPlatform.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurface.h  VulkanSwapchain.cpp
src/main/ui/: AppUI.cpp  AppUI.h  Button.h  Drawable.h  RectanglePrimitive.cpp  RectanglePrimitive.h
src/main/util/: Color.cpp  Logger.h
